--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+.streamlit/secrets.toml
 app/.streamlit/secrets.toml
 app/.streamlit/dev-firestore.json
 app/.streamlit/prod-firestore.json
