Works on Cloud Run now.

--- a/app/.streamlit/config.toml
+++ b/app/.streamlit/config.toml
@@ -1,8 +1,8 @@
 [server]
 enableXsrfProtection = false
 enableCORS = false
-port=8080
-address=0.0.0.0
+# port=8080
+# address=0.0.0.0
 
 [browser]
 gatherUsageStats = false
