--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -28,6 +28,7 @@ importlib-metadata==6.0.0
 Jinja2==3.1.2
 joblib==1.2.0
 jsonschema==4.17.3
+langchain>=0.0.268
 markdown-it-py==2.1.0
 MarkupSafe==2.1.2
 mdurl==0.1.2
