--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,6 +11,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 cryptography==39.0.1
 decorator==5.1.1
+email-normalize>=2.0.0
 entrypoints==0.4
 frozenlist==1.3.3
 gitdb==4.0.10
