--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,10 +1,11 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
 altair==4.2.0
+asyncio
 async-timeout==4.0.2
 attrs==22.2.0
 blinker==1.5
-cachetools==5.3.0
+cachetools==4.2.4
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
