Add bot showcase to home page.

--- a/app/.streamlit/config.toml
+++ b/app/.streamlit/config.toml
@@ -1,4 +1,6 @@
 [server]
+enableStaticServing = true
+# serverAddress = https://fovi.com/
 enableXsrfProtection = false
 enableCORS = false
 # port=8080
