--- a/app/.streamlit/config.toml
+++ b/app/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [server]
-enableStaticServing = true
+# enableStaticServing = true
 # serverAddress = https://fovi.com/
 enableXsrfProtection = false
 enableCORS = false
